# tender-extract

./: .gitignore  README.md  README_EN.md  pyproject.toml  uv.toml
config/: example.yaml
data/dicts/: keywords_zh.txt
examples/: example.md
src/tender_extract/: __init__.py  chunker.py  cli.py  context_enhancer.py  dedupe.py  llm_router.py  merge.py  ner.py  preprocess.py  rules.py  schema.py
